--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,11 @@ on:
         description: 'Log Level'
         required: True
         default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug 
       tags:
         description: 'Test Scenario tags'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
